add device discovery

--- a/src/HomeAssistantUnifiLed/HomeAssistantUnifiLed.csproj
+++ b/src/HomeAssistantUnifiLed/HomeAssistantUnifiLed.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\dotnet-homeassistant-mqtt-discovery\src\HomeAssistantDiscoveryHelper\HomeAssistantDiscoveryHelper.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
